--- a/us/vercel.json
+++ b/us/vercel.json
@@ -6,8 +6,9 @@
     }],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "us/wsgi.py"
+            "rewrites": [
+                { "source": "/(.*)", "destination": "/" }
+            ]
         }
     ]
 }
